--- a/app/src/main/res/layout/student_mypage_edit.xml
+++ b/app/src/main/res/layout/student_mypage_edit.xml
@@ -35,61 +35,69 @@
         android:id="@+id/icon_edit"
         android:layout_width="113dp"
         android:layout_height="89dp"
-        android:layout_marginEnd="57dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="35dp"
-        app:layout_constraintEnd_toStartOf="@+id/textView18"
+        android:layout_marginTop="100dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.161"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView17"
+        app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@android:drawable/ic_menu_add" />
 
     <TextView
         android:id="@+id/textView18"
         android:layout_width="69dp"
         android:layout_height="37dp"
-        android:layout_marginStart="57dp"
-        android:layout_marginTop="27dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="188dp"
+        android:layout_marginTop="88dp"
         android:text="名前"
         android:textSize="24sp"
-        app:layout_constraintStart_toEndOf="@+id/icon_edit"
-        app:layout_constraintTop_toBottomOf="@+id/textView17" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.151"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView19"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="150dp"
-        android:layout_marginStart="57dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="204dp"
+        android:layout_marginTop="124dp"
         android:text="学科"
         android:textSize="24sp"
-        app:layout_constraintBottom_toTopOf="@+id/textView20"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/icon_edit" />
+        app:layout_constraintHorizontal_bias="0.016"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView20"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="256dp"
-        android:layout_marginEnd="102dp"
-        android:layout_marginStart="57dp"
+        android:layout_marginEnd="80dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="156dp"
         android:text="学籍番号"
         android:textSize="24sp"
-        app:layout_constraintBottom_toTopOf="@+id/decision_button"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/icon_edit" />
+        app:layout_constraintHorizontal_bias="0.99"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/profile_edit"
         android:layout_width="286dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="104dp"
         android:layout_marginEnd="49dp"
         android:layout_marginStart="49dp"
+        android:layout_marginTop="232dp"
         android:ems="10"
         android:inputType="textPersonName"
-        app:layout_constraintBottom_toTopOf="@+id/decision_button"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/textView17" />
 
 </android.support.constraint.ConstraintLayout>
