--- a/app/src/main/res/layout/student_mypage_edit.xml
+++ b/app/src/main/res/layout/student_mypage_edit.xml
@@ -34,10 +34,10 @@
     <ImageButton
         android:id="@+id/icon_edit"
         android:layout_width="113dp"
-        android:layout_height="89dp"
+        android:layout_height="113dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="88dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.161"
         app:layout_constraintStart_toStartOf="parent"
@@ -45,8 +45,8 @@
         app:srcCompat="@android:drawable/ic_menu_add" />
 
     <TextView
-        android:id="@+id/textView18"
-        android:layout_width="69dp"
+        android:id="@+id/edit_name"
+        android:layout_width="165dp"
         android:layout_height="37dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="188dp"
@@ -54,13 +54,13 @@
         android:text="名前"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.151"
+        app:layout_constraintHorizontal_bias="0.652"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView19"
-        android:layout_width="wrap_content"
+        android:id="@+id/edit_depar"
+        android:layout_width="161dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="204dp"
@@ -73,16 +73,16 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView20"
-        android:layout_width="wrap_content"
+        android:id="@+id/edit_num"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="80dp"
-        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="200dp"
         android:layout_marginTop="156dp"
         android:text="学籍番号"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.99"
+        app:layout_constraintHorizontal_bias="0.115"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
