--- a/app/src/main/res/layout/password_forget.xml
+++ b/app/src/main/res/layout/password_forget.xml
@@ -36,6 +36,7 @@
         android:layout_marginTop="176dp"
         android:ems="10"
         android:inputType="textPersonName"
+        android:hint="メールアドレスを入力してください。"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
