--- a/app/src/main/res/layout/student_mypage_edit.xml
+++ b/app/src/main/res/layout/student_mypage_edit.xml
@@ -35,10 +35,10 @@
     <ImageButton
         android:id="@+id/icon_edit"
         android:layout_width="113dp"
-        android:layout_height="89dp"
+        android:layout_height="113dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="88dp"
+        android:layout_marginTop="68dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.161"
         app:layout_constraintStart_toStartOf="parent"
@@ -46,26 +46,29 @@
         app:srcCompat="@android:drawable/ic_menu_add" />
 
     <TextView
-        android:id="@+id/textView18"
-        android:layout_width="69dp"
+        android:id="@+id/edit_name"
+        android:layout_width="154dp"
         android:layout_height="37dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginStart="204dp"
         android:layout_marginTop="88dp"
         android:text="名前"
         android:textSize="24sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView19"
-        android:layout_width="wrap_content"
+        android:id="@+id/edit_depar"
+        android:layout_width="152dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="204dp"
         android:layout_marginTop="8dp"
         android:text="学科"
         android:textSize="24sp"
-        app:layout_constraintBottom_toTopOf="@+id/textView20"
+        app:layout_constraintBottom_toTopOf="@+id/edit_num"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -73,8 +76,8 @@
         app:layout_constraintVertical_bias="1.0" />
 
     <TextView
-        android:id="@+id/textView20"
-        android:layout_width="wrap_content"
+        android:id="@+id/edit_num"
+        android:layout_width="156dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="204dp"
