--- a/app/src/main/res/layout/student_timeline.xml
+++ b/app/src/main/res/layout/student_timeline.xml
@@ -9,21 +9,24 @@
     android:fitsSystemWindows="true">
 
     <!--サイドバー-->
+
+    <ListView
+        android:id="@+id/ListView"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent">
+
+    </ListView>
+
     <android.support.design.widget.NavigationView
-        android:id="@+id/navigationView"
+        android:id="@+id/navigationview"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
         app:headerLayout="@layout/drawer_header"
-        app:menu="@menu/drawer" />
+        app:menu="@menu/drawer" >
 
-    <ListView
-        android:id="@+id/ListView"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent" >
-    </ListView>
-
+    </android.support.design.widget.NavigationView>
 
 
 </android.support.v4.widget.DrawerLayout>
