--- a/app/src/main/res/layout/student_mypage.xml
+++ b/app/src/main/res/layout/student_mypage.xml
@@ -8,12 +8,31 @@
 
     <TextView
         android:id="@+id/textView16"
+        android:layout_width="199dp"
+        android:layout_height="29dp"
+        android:layout_marginBottom="2dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginStart="2dp"
+        android:layout_marginTop="52dp"
+        android:text="学年"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toTopOf="@+id/textView14"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/imageView3"
+        app:layout_constraintTop_toBottomOf="@+id/textView10" />
+
+    <TextView
+        android:id="@+id/textView6"
         android:layout_width="200dp"
-        android:layout_height="39dp"
+        android:layout_height="29dp"
+        android:layout_marginBottom="3dp"
+        android:layout_marginEnd="23dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="20dp"
         android:text="名前"
         android:textSize="24sp"
+        app:layout_constraintBottom_toTopOf="@+id/textView16"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/imageView3"
         app:layout_constraintTop_toBottomOf="@+id/textView10" />
 
@@ -42,29 +61,41 @@
         android:id="@+id/imageView3"
         android:layout_width="137dp"
         android:layout_height="136dp"
+        android:layout_marginBottom="16dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="4dp"
+        app:layout_constraintBottom_toTopOf="@+id/textView11"
+        app:layout_constraintEnd_toStartOf="@+id/textView16"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/option_button"
         app:srcCompat="@android:drawable/ic_menu_add" />
 
     <TextView
         android:id="@+id/textView14"
-        android:layout_width="200dp"
-        android:layout_height="39dp"
+        android:layout_width="198dp"
+        android:layout_height="29dp"
+        android:layout_marginEnd="25dp"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="2dp"
         android:text="学科"
         android:textSize="24sp"
+        app:layout_constraintBottom_toTopOf="@+id/textView15"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/imageView3"
         app:layout_constraintTop_toBottomOf="@+id/textView16" />
 
     <TextView
         android:id="@+id/textView15"
         android:layout_width="198dp"
-        android:layout_height="39dp"
+        android:layout_height="29dp"
+        android:layout_marginBottom="19dp"
+        android:layout_marginEnd="25dp"
         android:layout_marginStart="8dp"
         android:text="学籍番号"
         android:textSize="24sp"
+        app:layout_constraintBottom_toTopOf="@+id/textView11"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/imageView3"
         app:layout_constraintTop_toBottomOf="@+id/textView14" />
 
