--- a/app/src/main/res/menu/drawer.xml
+++ b/app/src/main/res/menu/drawer.xml
@@ -5,15 +5,18 @@
 
         <item
             android:icon="@android:drawable/ic_menu_myplaces"
-            android:title="マイページ" />
+            android:title="マイページ"
+            android:id="@+id/myPage"/>
     </group>
     <item
         android:title="その他">
         <menu android:checkableBehavior="single">
             <item
-                android:title="ログアウト" />
+                android:title="ログアウト"
+                android:id="@+id/logout"/>
             <item
-                android:title="退会" />
+                android:title="退会"
+                android:id="@+id/taikai"/>
 
         </menu>
     </item>
