--- a/app/src/main/res/layout/student_mypage.xml
+++ b/app/src/main/res/layout/student_mypage.xml
@@ -106,7 +106,7 @@
         android:layout_marginBottom="24dp"
         android:layout_marginEnd="17dp"
         android:layout_marginStart="17dp"
-        android:text="TextView"
+        android:text=""
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
