--- a/app/src/main/res/layout/new_account.xml
+++ b/app/src/main/res/layout/new_account.xml
@@ -62,7 +62,7 @@
                 android:text="学科"
                 android:textSize="30sp"
                 app:layout_constraintTop_toBottomOf="@+id/new_number"
-                tools:layout_editor_absoluteX="16dp"
+                tools:layout_editor_absoluteX="30dp"
                 tools:layout_editor_absoluteY="200dp" />
 
             <Spinner
@@ -70,6 +70,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:entries="@array/arrays"
+                android:textSize="45sp"
                 android:spinnerMode="dialog" />
 
             <TextView
