--- a/app/src/main/res/layout/new_account.xml
+++ b/app/src/main/res/layout/new_account.xml
@@ -165,7 +165,7 @@
                 android:layout_width="100dp"
                 android:layout_height="50dp"
                 android:layout_marginStart="120dp"
-                android:text="Button" />
+                android:text="作成" />
 
         </LinearLayout>
 
