--- a/app/src/main/res/layout/student_item.xml
+++ b/app/src/main/res/layout/student_item.xml
@@ -15,7 +15,7 @@
 
     <TextView
         android:id="@+id/title"
-        android:layout_width="wrap_content"
+        android:layout_width="155dp"
         android:layout_height="70dp"
         android:layout_marginStart="1dp"
         android:gravity="center_vertical"
