サイドバー追加

--- a/app/src/main/res/layout/teacher_department.xml
+++ b/app/src/main/res/layout/teacher_department.xml
@@ -1,25 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
+    tools:openDrawer="start">
 
     <!--学科情報-->
+
+    <android.support.design.widget.NavigationView
+        android:id="@+id/teacher_department_navigationview"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:fitsSystemWindows="true"
+        app:headerLayout="@layout/drawer_header"
+        app:menu="@menu/drawer" />
 
     <ScrollView
         android:layout_width="323dp"
         android:layout_height="454dp"
         android:layout_marginEnd="30dp"
-        android:layout_marginStart="31dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3">
+        android:layout_marginStart="31dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/textView3"
+                android:layout_width="match_parent"
+                android:layout_height="52dp"
+                android:layout_marginEnd="112dp"
+                android:layout_marginStart="112dp"
+                android:layout_marginTop="7dp"
+                android:text="学科選択"
+                android:textSize="36sp" />
 
             <Button
                 android:id="@+id/MI"
@@ -104,24 +122,4 @@
         </LinearLayout>
     </ScrollView>
 
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="160dp"
-        android:layout_height="52dp"
-        android:layout_marginEnd="112dp"
-        android:layout_marginStart="112dp"
-        android:layout_marginTop="7dp"
-        android:text="学科選択"
-        android:textSize="36sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <android.support.design.widget.NavigationView
-        android:id="@+id/teacher_department_navigationview"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        app:headerLayout="@layout/drawer_header"
-        app:menu="@menu/drawer" />
-
-</android.support.constraint.ConstraintLayout>
+</android.support.v4.widget.DrawerLayout>
