--- a/app/src/main/res/layout/teacher_student.xml
+++ b/app/src/main/res/layout/teacher_student.xml
@@ -15,6 +15,7 @@
         app:menu="@menu/drawer" />
 
     <ListView
+        android:id="@+id/TeacherView"
         android:layout_width="match_parent"
         android:layout_height="match_parent" >
 
