--- a/app/src/main/res/layout/student_mypage.xml
+++ b/app/src/main/res/layout/student_mypage.xml
@@ -101,11 +101,12 @@
 
     <TextView
         android:id="@+id/textView11"
-        android:layout_width="350dp"
+        android:layout_width="0dp"
         android:layout_height="256dp"
         android:layout_marginBottom="24dp"
         android:layout_marginEnd="17dp"
         android:layout_marginStart="17dp"
+        android:textSize="24sp"
         android:text=""
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
