--- a/app/src/main/res/layout/student_mypage_edit.xml
+++ b/app/src/main/res/layout/student_mypage_edit.xml
@@ -92,12 +92,13 @@
     <EditText
         android:id="@+id/profile_edit"
         android:layout_width="286dp"
-        android:layout_height="wrap_content"
+        android:layout_height="188dp"
         android:layout_marginEnd="49dp"
         android:layout_marginStart="49dp"
-        android:layout_marginTop="240dp"
+        android:layout_marginTop="210dp"
         android:ems="10"
-        android:inputType="textPersonName"
+        android:inputType="textMultiLine"
+        android:lines="10"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
