--- a/app/src/main/res/layout/new_account.xml
+++ b/app/src/main/res/layout/new_account.xml
@@ -166,7 +166,8 @@
                 android:layout_width="100dp"
                 android:layout_height="50dp"
                 android:layout_marginStart="120dp"
-                android:text="作成" />
+                android:text="作成"
+                android:background="@drawable/button_background"/>
 
         </LinearLayout>
 
