--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#339900</color>
     <color name="colorAccent">#FF4081</color>
     <color name="window_background">#33CC00</color>
+    <color name="text_color">#FFFFFF</color>
 </resources>
