--- a/app/src/main/res/layout/password_forget.xml
+++ b/app/src/main/res/layout/password_forget.xml
@@ -46,7 +46,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginTop="244dp"
-        android:background="@drawable/button_background"
+        android:background="@drawable/button_state"
         android:text="送信"
         android:textColor="@color/text_color"
         app:layout_constraintStart_toStartOf="parent"
