--- a/app/src/main/res/layout/login_student.xml
+++ b/app/src/main/res/layout/login_student.xml
@@ -49,7 +49,7 @@
         android:layout_marginEnd="136dp"
         android:layout_marginStart="136dp"
         android:layout_marginTop="272dp"
-        android:background="@drawable/button_background"
+        android:background="@drawable/button_state"
         android:text="ログイン"
         android:textColor="@color/text_color"
         android:textSize="18sp"
