--- a/app/src/main/res/layout/student_mypage_edit.xml
+++ b/app/src/main/res/layout/student_mypage_edit.xml
@@ -17,7 +17,9 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:background="@drawable/button_state"
+        android:textColor="@color/text_color"/>
 
     <TextView
         android:id="@+id/textView17"
