--- a/app/src/main/res/layout/login_student.xml
+++ b/app/src/main/res/layout/login_student.xml
@@ -37,7 +37,7 @@
         android:ems="10"
         android:hint="メールアドレスを入力してください"
         android:inputType="textPersonName"
-        android:text="taka@gmail.com"
+        android:text=""
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -108,7 +108,7 @@
         android:ems="10"
         android:hint="パスワードを入力してください"
         android:inputType="textPassword"
-        android:text="abcde123"
+        android:text=""
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
