いろいろ編集

--- a/app/src/main/res/layout/new_account.xml
+++ b/app/src/main/res/layout/new_account.xml
@@ -51,7 +51,7 @@
                 android:layout_marginTop="4dp"
                 android:ems="10"
                 android:inputType="numberSigned"
-                android:hint="学籍番号を入力してください"
+                android:hint="@string/new_number_hint"
                 tools:layout_editor_absoluteX="8dp"
                 tools:layout_editor_absoluteY="270dp" />
 
@@ -108,7 +108,7 @@
                 android:inputType="textPersonName"
                 tools:layout_editor_absoluteX="31dp"
                 tools:layout_editor_absoluteY="448dp"
-                android:hint="名前を入力してください" />
+                android:hint="@string/new_nmae_hint" />
 
             <TextView
                 android:id="@+id/Mail"
@@ -125,7 +125,7 @@
                 android:layout_marginTop="4dp"
                 android:ems="10"
                 android:inputType="textEmailAddress"
-                android:hint="メールアドレスを入力してください" />
+                android:hint="@string/mailadress_hint" />
 
             <TextView
                 android:id="@+id/Password"
@@ -142,7 +142,7 @@
                 android:layout_marginTop="4dp"
                 android:ems="10"
                 android:inputType="textPassword"
-                android:hint="6文字以上のパスワードを入力してください"/>
+                android:hint="@string/new_passsword_hint"/>
 
             <TextView
                 android:id="@+id/RePassword"
@@ -159,7 +159,7 @@
                 android:layout_marginTop="4dp"
                 android:ems="10"
                 android:inputType="textPassword"
-                android:hint="6文字以上のパスワードを入力してください"/>
+                android:hint="@string/new_passsword_hint"/>
 
             <Button
                 android:id="@+id/new_account_button"
