--- a/app/src/main/res/layout/login_student.xml
+++ b/app/src/main/res/layout/login_student.xml
@@ -35,7 +35,7 @@
         android:layout_marginStart="40dp"
         android:layout_marginTop="84dp"
         android:ems="10"
-        android:hint="メールアドレスを入力してください"
+        android:hint="@string/mailadress_hint"
         android:inputType="textPersonName"
         android:text=""
         app:layout_constraintStart_toStartOf="parent"
@@ -106,7 +106,7 @@
         android:layout_marginStart="40dp"
         android:layout_marginTop="204dp"
         android:ems="10"
-        android:hint="パスワードを入力してください"
+        android:hint="@string/passsword_hint"
         android:inputType="textPassword"
         android:text=""
         app:layout_constraintStart_toStartOf="parent"
