--- a/app/src/main/res/layout/password_forget.xml
+++ b/app/src/main/res/layout/password_forget.xml
@@ -10,10 +10,13 @@
         android:id="@+id/textView8"
         android:layout_width="336dp"
         android:layout_height="46dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginStart="24dp"
         android:layout_marginTop="32dp"
         android:text="パスワードを忘れた場合"
         android:textSize="30sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -21,7 +24,7 @@
         android:id="@+id/textView9"
         android:layout_width="175dp"
         android:layout_height="32dp"
-        android:layout_marginStart="34dp"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="144dp"
         android:text="メールアドレス"
         android:textSize="24sp"
@@ -32,10 +35,10 @@
         android:id="@+id/forget_mail"
         android:layout_width="338dp"
         android:layout_height="45dp"
-        android:layout_marginStart="34dp"
-        android:layout_marginTop="180dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="176dp"
         android:ems="10"
-        android:hint="メールアドレスを入力してください。"
+        android:hint="@string/mailadress_hint"
         android:inputType="textPersonName"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
